# egui-material-icons

./: .gitignore  Cargo.toml  README.md
egui-material-icons/: Cargo.toml
egui-material-icons/examples/: icon-browser.rs
egui-material-icons/src/: lib.rs
material-icons-proc-macro/src/: lib.rs
