[package]
name = "egui-material-icons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = ">=0.27.2", default-features = false }
material-icons-proc-macro = {path = "../material-icons-proc-macro"}

[dev-dependencies]
eframe = ">=0.27.2"
egui_demo_lib = ">=0.27.2"
